app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}
/* HIDE SCROLLBAR */

.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

/* CUSTOM CURSOR */

* {
  cursor: none;
}

.cursor-dot {
  width: 10px;
  height: 10px;
  background: white;
  position: fixed;
  border-radius: 999px;
  pointer-events: none;
  z-index: 9999;
  mix-blend-mode: difference;
}

.cursor-outline {
  width: 40px;
  height: 40px;
  border: 1px solid rgba(255,255,255,0.4);
  position: fixed;
  border-radius: 999px;
  pointer-events: none;
  z-index: 9999;
  transition: transform 0.15s ease-out;
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee {
  animation: marquee 90s linear infinite;
  animation-delay: 5s;
  width: max-content;
}

.animate-marquee:hover {
  animation-play-state: paused;
}
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}

.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

